# jarvis

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  nginx.conf  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.claude/agents/: api-architect.md  aviation-innovator.md  crewai-architect.md  crewai-reviewer.md  fastapi-reviewer.md  feature-planner.md  flight-computer-engineer.md  github-pr-reviewer.md  k8s-kustomize-reviewer.md  k8s-production-auditor.md  linkedin-reddit-prospector.md  mapbox-navigation-ui.md  production-readiness-reviewer.md  pytest-api-tester.md  react-native-ui-expert.md  react-native-ui-reviewer.md  reddit-aviation-marketer.md  supabase-database-agent.md  windman-prompt-refiner.md
.claude/commands/: api-arch.md  audit-k8s.md  aviation-innovator.md  db.md  fix.md  flight.md  mapbox.md  plan-feature.md  prod-ready.md  prompt.md  reddit.md  review-crewai.md  review-fastapi.md  review-k8s.md  ship.md  test-api.md
backend/: Dockerfile  main.py  pyproject.toml
backend/ai/: settings.py
backend/ai/agents/agent_generator/: crew.py  flow.py  schemas.py
backend/ai/agents/agent_generator/config/: agents.yaml  tasks.yaml
backend/ai/agents/writer/: crew.py  schemas.py
backend/ai/agents/writer/config/: agents.yaml  tasks.yaml
backend/api/: agents.py  commands.py  pipelines.py  runs.py  skills.py  stats.py
backend/core/: settings.py
backend/services/: claude_parser.py  db.py  git_sync.py
src/: App.tsx  index.css  index.tsx
src/api/: client.ts
src/hooks/: useAgents.ts  usePipelines.ts  (+2 more)
(+50 files in other folders)
