[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "fastapi>=0.136.3",
    "logfire>=4.6.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "uvicorn[standard]>=0.48.0",
]
